# gen-ai

./: README.md
agentcore/bedrock-agentcore-samples/: Readme.md
agentcore/bedrock-agentcore-samples/agent-response/: README.md  pyproject.toml  runtime_with_bedrock_model.ipynb
agentcore/bedrock-agentcore-samples/gateway-lambda-mcp-tools/: README.md  gateway-target-lambda-oauth.ipynb  gateway_target_lambda_iam.ipynb  pyproject.toml  utils.py
agentcore/bedrock-agentcore-samples/hosting-mcp-server-2/: .bedrock_agentcore.yaml  invoke_mcp_tools.py  main.py  mcp_client.py  mcp_client_remote.py  pyproject.toml  utils.py
agentcore/bedrock-agentcore-samples/hosting-mcp-server-sigv4/: just_for_learningh_mcp_call_greet.py  mcp_server.py  pyproject.toml
agentcore/me/: 1- agent_with_starter_kit.py  2-test_agentcore_local.py  agentcore-test-local.ipynb  main.py  pyproject.toml
agentcore/me/a2a-server/: README.md  my_a2a_server.py  pyproject.toml
agentcore/me/agentcore-with-starterkit/: .gitignore  README.md  codex_created_dependencies_listing._from_zip.txt  main.py  pyproject.toml
agentcore/me/agentcore-with-starterkit/.bedrock_agentcore/direct_agent/: dependencies.hash
agentcore/me/custome-agent-no-agentcore/: README.md  agent.py  deploy_agent.py  dockerfile  invoke_agent.py  pyproject.toml
agentcore/me/mcp-server/: README.md  my_mcp_client.py  my_mcp_server.py  pyproject.toml
agentcore/me/test-agent-local/: 1-test_agent-local.ipynb  pyproject.toml
agentcore/raj/agentcore/: .bedrock_agentcore.yaml  README.md  agent-core.py  pyproject.toml  requirements.txt
bedrock/course-aws-gen-ai-bedrock/: README.MD
bedrock/course-udemy-bedrock-genai/: readme.md
bedrock/examples/: Claude3Haiku.js  GetFoundationModel.js  package.json
langchain/course-scrimba-langchain-js/: .gitignore  1-standalone-chain.js  2-vector.js  3-retrieval.js  5-answereContext.js  6-memory.js  8-runnableSequence-1.js  8-runnableSequence-2.js  8-runnableSequence-3-translation.js  match_documents.sql  package.json  readme.md
langchain/course-youtube-langchain-js-tutorial/: 1-llm.js  2-prompt-templates.js  3-output-parser.js  4-document-loader-chain.js  5-memory-vectore-store.js  6-conversation-retrieval-chain.js  7-agent.js  8-memory  package.json
langchain/examples/: DynamoDBChatMessageHistory.ts  dynamodbMemory.ts  package.json  readme.txt
langgraph/course-freecodecamp-langgraph/: .gitignore  readme.md  setup.ipynb
langgraph/course-langchain-academy-langgraph-foundation/: .gitignore  readme.md  requirements.txt  setup.ipynb
langgraph/course-linkedin-ai-agents-langgraph/: 0_setup.ipynb  1_code_react_agent.ipynb  2_product_qna_agentic_chatbot.ipynb  3_orders_chatbot_with_custom_agent.ipynb  4_summary_chatbot_with_reviewer.ipynb  5_multi_agent_chatbots_with_routing.ipynb  readme.md
langgraph/simple-langgraph/: Setup.ipynb  simple.ipynb
langgraph/tavily-langgraph/: 0_setup.ipynb  1_basic_chatbot.ipynb  2_tavily_tool.ipynb  agent.ts  (+8 more)
langgraph/tavily-langgraph-ts/: package-lock.json
strands/course-analytics-vidhya-strands-first-aqent/: README.md  main.py  pyproject.toml  requirements.txt
strands/course-analytics-vidhya-strands-first-aqent/lab1/: 1-basic-use.py  2-system-prompt-use.py  3-httpd-tool-use.py
strands/course-analytics-vidhya-strands-first-aqent/lab2/: 1-bedrock-default-config.py  2-bedrock-detailed-config.py  3-anthropic-model-provider.py
strands/course-analytics-vidhya-strands-first-aqent/lab3/: aws-tool-use.py
strands/course-analytics-vidhya-strands-first-aqent/lab4/: mcp-and-tools.ipynb  mcp_calculator.py
strands/strands-agents-samples/: README.md  pyproject.toml
strands/strands-agents-samples/01-fundamentals/01-first-agent/: 02-recipe_bot.py
strands/strands-agents-samples/01-fundamentals/04-tools/02-custom-tools/: appointments.db  custom-tools-with-strands-agents.ipynb
strands/strands-agents-samples/01-fundamentals/05-advance-processing-agent-response/: advanced_processing_agent_response.ipynb
strands/strands-agents-samples/MCP/aws-assistant-mcp/: aws_cost_assistant.py  main.py  pyproject.toml
strands/strands-agents-samples/MCP/using-mcp-tools/: mcp-agent.ipynb
strands/strands-agents-samples/advance-processing-agent-response/: advanced_processing_agent_response.ipynb
strands/strands-agents-samples/first-agent/: 01-first-agent.ipynb
(+149 files in other folders)
