[project]
name = "strands-agents-samples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bedrock-agentcore>=1.0.3",
    "bedrock-agentcore-starter-toolkit>=0.1.26",
    "ddgs>=9.6.0",
    "fastapi>=0.120.3",
    "mcp>=1.16.0",
    "pydantic>=2.12.0",
    "strands-agents>=1.11.0",
    "strands-agents-tools>=0.2.10",
    "uvicorn>=0.37.0",
]
