[project]
name = "gateway-lambda-mcp-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "strands-agents",
    "strands-agents-tools",
    "boto3",
    "bedrock-agentcore",
    "bedrock-agentcore-starter-toolkit",
    ]
