[project]
name = "hosting-mcp-server-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.10.0",
    "boto3",
    "bedrock-agentcore<=0.1.5",
    "bedrock-agentcore-starter-toolkit==0.1.14"
]
[tool.setuptools]
py-modules = [
    "mcp_server",
    "mcp_client"
]
