[project]
name = "hosting-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bedrock-agentcore>=1.0.5",
    "boto3",
    "mcp>=1.10.0",
    "bedrock-agentcore-starter-toolkit==0.1.14",
    "httpx"
]

[tool.setuptools]
py-modules = [
    "mcp_server",
    "mcp_client",
    "mcp_client_remote",
    "mcp_list_tools",
    "mcp_call_greet",
]
