[project]
name = "custome-agent-no-agentcore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.2",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "strands-agents>=1.19.0",
    "uvicorn[standard]>=0.38.0",
]
